fix: modify spacing to prevent horizontal overflow in large screens

--- a/src/components/ProductInformation/ProductInformation.module.scss
+++ b/src/components/ProductInformation/ProductInformation.module.scss
@@ -271,11 +271,11 @@
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     z-index: -1;
 
     display: block;
     height: 100%;
-    width: 100%;
     border: 0.125rem solid #222222;
     border-radius: 999em;
 
