--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -6,16 +6,7 @@
 
 .header {
   position: relative;
-
-  max-width: var(--page-content-max-width);
-
-  padding: var(--header-padding-box) 1rem;
-
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  row-gap: 0.25rem;
-  column-gap: 1rem;
+  width: 100%;
 
   &::before {
     content: "";
@@ -25,17 +16,29 @@
     transform: translateX(-50%);
 
     display: block;
-    width: 100vw;
+    width: 100%;
     border-bottom: var(--header-border-bottom-width) solid
       rgba(34, 34, 34, 0.15);
   }
 
-  &::after {
-    content: "";
-    order: 2;
-    display: block;
-    width: 100%;
+  @media (min-width: 900px) {
+    --header-border-bottom-width: 2px;
+
+    &::before {
+      border-bottom-width: var(--header-border-bottom-width);
+    }
   }
+}
+
+.headerContainer {
+  max-width: var(--page-content-max-width);
+  padding: var(--header-padding-box) 1rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 0.25rem;
+  column-gap: 1rem;
 
   & > .logo {
     order: 1;
@@ -54,18 +57,19 @@
     flex: 1 0 0;
   }
 
-  @media (min-width: 900px) {
-    --header-border-bottom-width: 2px;
+  &::after {
+    content: "";
+    order: 2;
+    display: block;
+    width: 100%;
+  }
 
+  @media (min-width: 900px) {
     margin: auto;
 
     padding-left: 2.25rem;
     padding-right: 2.25rem;
     padding-bottom: 0rem;
-
-    &::before {
-      border-bottom-width: var(--header-border-bottom-width);
-    }
 
     &::after {
       display: none;
@@ -150,7 +154,6 @@
       "footer footer";
     grid-template-columns: 2fr 1fr;
     grid-gap: 10px;
-    padding: 10px;
 
     & > .header {
       grid-area: header;
@@ -171,4 +174,8 @@
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
+}
+
+.right {
+  padding-right: 2em;
 }
